AC_INIT(./mod_load.c)

dnl Regular configure stuff

AC_PROG_CC
AC_PROG_CPP
AC_AIX
AC_ISC_POSIX
AC_MINIX

AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h unistd.h limits.h fcntl.h)

dnl _Must_ come before AC_FUNC_GETLOADAVG
AC_CHECK_LIB(kstat, kstat_open)

dnl Supposedly in AC_FUNC_GETLOADAVG, but...?
AC_CHECK_FUNCS(pstat_getdynamic)
AC_FUNC_GETLOADAVG

AC_CONFIG_HEADER(mod_load.h)
AC_OUTPUT(Makefile)
